--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -7,19 +7,21 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="form-container">
-        <h2>Signup</h2>
-        <form action="/signup" method="post">
-            <div class="form-group">
-                <label for="name">Name:</label>
-                <input type="text" id="name" name="username" placeholder="Enter your Name" required autocomplete="off">
-            </div>
-            <div class="form-group">
-                <label for="password">Password:</label>
-                <input type="password" id="password" name="password" placeholder="Password" required autocomplete="off">
-            </div>
-            <button type="submit" class="submit-btn">Signup</button>
-        </form>
-    </div>
+    <main class="main-content"></main>
+        <div class="form-container">
+            <h2>Signup</h2>
+            <form action="/signup" method="post">
+                <div class="form-group">
+                    <label for="name">Name:</label>
+                    <input type="text" id="name" name="username" placeholder="Enter your Name" required autocomplete="off">
+                </div>
+                <div class="form-group">
+                    <label for="password">Password:</label>
+                    <input type="password" id="password" name="password" placeholder="Password" required autocomplete="off">
+                </div>
+                <button type="submit" class="submit-btn">Signup</button>
+            </form>
+        </div>
+    </main>
 </body>
 </html>
