--- a/views/login.ejs
+++ b/views/login.ejs
@@ -24,5 +24,7 @@
             <p>Don't have an account? <a href="/signup">Signup</a></p>
         </div>
     </main>
+    <script src="script.js"></script>
+
 </body>
 </html>
