--- a/frizzo-frontend/src/components/Dashboard/Dash_main.css
+++ b/frizzo-frontend/src/components/Dashboard/Dash_main.css
@@ -5,8 +5,7 @@
     align-items: center;
     font-size: 1.5rem;
     gap: 0.7rem;
-    margin-left: 58rem;  
-    margin-top: 0.5rem;
+    margin: 0.3rem 0.5rem 0 58rem;  
 }
 
 .notif-icon , .prof-icon{
@@ -14,10 +13,14 @@
     height: 2rem;
     width: 2rem;
     text-align: center;
-    background-color: #38014f;
+    background-color:  #10757a;
     box-shadow:  -3px -3px 6px rgba(255, 255, 255, 0.1),
     3px 3px 6px rgba(0, 0, 0, 0.678);
-
     border-radius: 80px;
 }
 
+
+
+.notif-icon svg , .prof-icon svg{
+    color: white;
+}
