--- a/frizzo-frontend/src/components/Dashboard/style.css
+++ b/frizzo-frontend/src/components/Dashboard/style.css
@@ -8,8 +8,11 @@ html, body {
   margin: 0;
   padding: 0;
   height: 100%;
-  background-color: #010326;
+  /* background-image: linear-gradient( to right, #040404 , #040404d7 , #040404bf , #04040492,  #0404047a, #04040465, #0404046a ); */
+  background-color: rgb(24, 24, 24);
+
 }
+
 
 
 .content {
@@ -22,5 +25,5 @@ html, body {
 
 .nav-bar{
   border-right: solid rgba(75, 74, 74, 0.55);
-  height: 100vh;
+  height: 100%;
 }
