--- a/views/transaction.ejs
+++ b/views/transaction.ejs
@@ -4,11 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css" rel="stylesheet" />
-<<<<<<< HEAD
-    <link href="transaction.css" rel="stylesheet">
-=======
-    <link href="style.css" rel="stylesheet">
->>>>>>> bb78a55e93da7579e35b3c2422a9c78a79000582
+    <link href="/public/transaction.css" rel="stylesheet">
+    <link href="/public/style.css" rel="stylesheet">
     <title>Transaction</title>
 </head>
 <body>
@@ -40,10 +37,9 @@
             </ul>
         </div>
     </div>
-<<<<<<< HEAD
-    <div class="transactionpop" id="modal">
+    <div id="modal" class="transactionpop">
         <div class="content">
-            <spanclass="close">&times;</span>
+            <span id="closeModalBtn" class="close">&times;</span>
             <h2>Add Transaction</h2>
             <div class="expense-type">
                 <img src="/images/shopping-bag.png" alt="Shopping" class="expense-type-img" data-type="Food">
@@ -53,18 +49,16 @@
                 <img src="/images/reward.png" alt="Miscellaneous" class="expense-type-img" data-type="Miscellaneous">
                 <img src="/images/destination.png" alt="Travel" class="expense-type-img" data-type="Travel">
             </div>
+            <form id="transactionForm" style="display: none;">
+                <div class="form-group">
+                    <label for="amount">Amount:</label>
+                    <input type="number" id="amount" name="amount" required>
+                </div>
+                <button type="submit" class="submit-btn">Add Transaction</button>
+            </form>
         </div>
-        <form id="transactionForm" style="display: none;">
-            <label for="amount">Amount:</label>
-            <input type="number" id="amount" name="amount" required>
-            <button type="submit">Add Transaction</button>
-        </form>
     </div>
-    <button class="add-transaction-btn">Add transaction</button>
-    <script src="transaction.js"></script>
-=======
-    <button class="add-transaction-btn">Add transaction</button>
-    <script src="script.js"></script>
->>>>>>> bb78a55e93da7579e35b3c2422a9c78a79000582
+    <button id="openModalBtn" class="add-transaction-btn">Add Transaction</button>
+    <script src="/src/transaction.js"></script>
 </body>
 </html>
